Add setting about output file header

--- a/appSettings.json
+++ b/appSettings.json
@@ -27,6 +27,9 @@
             "//",
             "#region"
         ],
-        "OutputFile": "output.csv"
+        "Output":{
+            "WithHeader": true,
+            "FileName": "output.csv"
+        }
     }
 }
