seperate the setting about NotMatch and Noise

--- a/appSettings.json
+++ b/appSettings.json
@@ -12,6 +12,8 @@
         "RegEx": {
             "Match":"([\u300e\u4e00-\u9fa5\u300f\uff01-\uff20\u3105-\u3126 \\-\\!]+)",
             "NotMatch":[
+            ],
+            "Noise":[
                 "\\W"
             ]
         },
