可自訂輸出CSV的分隔符號

--- a/appSettings.json
+++ b/appSettings.json
@@ -4,7 +4,8 @@
             "aspx",
             "cs",
             "html",
-            "htm"
+            "htm",
+            "js"
         ]
     },
 
@@ -31,6 +32,7 @@
         ],
         "Output":{
             "WithHeader": true,
+            "Seperator": "\t",
             "FileName": "output.csv"
         }
     }
